--- a/MonAppBlazor.Mobile/Components/Layout/NavMenu.razor
+++ b/MonAppBlazor.Mobile/Components/Layout/NavMenu.razor
@@ -28,5 +28,10 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Mon Compo
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="produits">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Produits
+            </NavLink>
+        </div>
     </nav>
 </div>
